Fix space between rows on mobile and tablet devices

--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -38,17 +38,17 @@
     min-height: 50vh;
 }
 
-/* .o-demo-form__field-2-col {
+.o-demo-form__field-2-col {
+  display: grid;
   grid-template-columns: 100%;
   gap: 0.5rem;
 }
 
 .o-demo-form__field-3-col {
+  display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: auto auto auto;
   row-gap: 0.5rem;
-  justify-content: space-between;
-} */
+}
 
 @media (min-width: 768px) {
   .o-demo-form {
